# kriyaos

./: .gitignore  AI.md  Makefile  PLAN.md  README.md  SETUP.md  STATE.md  package.json  pyproject.toml
kriya/: __main__.py  apple_calendar.py  apple_reminders.py  approvals.py  cli.py  daily_brief.py  email_triage.py  execute.py  finance.py  google_calendar.py  google_keep.py  google_tasks.py  groceries.py  grocery_sync.py  inbox.py  memory.py  poll.py  server.py  sync.py  sync_routes.py  task_sync.py  vitals.py
kriya/tui/: __init__.py  app.py  bindings.py  state.py
kriya/utils/: audit.py  errors.py  secrets.py  usage.py
launchd/: com.savyasachi.kriyaos.daily-brief.plist.template
tests/: test_apple_calendar.py  test_apple_reminders.py  test_approvals.py  test_audit.py  test_calendar_sync.py  test_cli.py  test_daily_brief.py  test_email_triage.py  test_errors.py  test_execute.py  test_finance.py  test_google_keep.py  test_google_tasks.py  test_groceries.py  test_grocery_sync.py  test_inbox.py  test_launchd.py  test_memory.py  test_poll.py  test_secrets.py  test_server.py  test_sync.py  test_sync_routes.py  test_task_sync.py  test_tui_app.py  test_tui_state.py  test_usage.py  test_vitals.py
